--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -3,3 +3,21 @@
 完成了 Stage 1 阶段的开发, 初步完成 managedPtr 的开发, 准备进行后端开发。
 
 Objects 的话, value 应该是携带一个由 new 创建的 managedPtr。 不与原来的冲突。
+
+# 2022/12/03
+
+value全部重构，使用shared_ptr进行内存管理，垃圾才用GC
+
+Context是一段代码运行时所需的局部环境，是一种符号表
+
+Context包括Global Contexts, Module contexts和Local contexts.
+
+Global contexts保存了若干个Module contexts，是代码运行时所可以访问到的全部Contexts
+
+Module contexts保存了当前模块（文件）的context，通常以import形式创建。
+
+Local contexts是保存在栈上的context，被分layer存储
+
+当前函数可以访问到当前StackFrame的Module contexts, 
+所有Local contexts，
+以及允许通过导入名称索引的方式显式访问其他Module contexts. 
