--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -21,3 +21,7 @@ Local contexts是保存在栈上的context，被分layer存储
 当前函数可以访问到当前StackFrame的Module contexts,
 所有Local contexts，
 以及允许通过导入名称索引的方式显式访问其他Module contexts. 
+
+# 2022/12/10
+
+关于 `threading` , `promise` 等的设计，spawn出来的 `thread` 可以使用 `rex::managedPtr` 进行管理, 在 `environment` 中新建一个线程池，允许用户持有线程的id，可以通过这个id来 `wait` 这个线程，获取这个线程的 `result`.
