--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -25,3 +25,31 @@ Local contexts是保存在栈上的context，被分layer存储
 # 2022/12/10
 
 关于 `threading` , `promise` 等的设计，spawn出来的 `thread` 可以使用 `rex::managedPtr` 进行管理, 在 `environment` 中新建一个线程池，允许用户持有线程的id，可以通过这个id来 `wait` 这个线程，获取这个线程的 `result`.
+
+# 2022/12/22
+
+FFI思路：通过读取rexffi文件，自动生成到 `rexNativeMethod` 格式的 `binding` , 通过 `cmake` 进行编译后可以交给rex了.
+
+```
+ffi-lib: hello.h ; complete with your own library headers
+
+ffi-types:
+    ; just define your own structure and write down how to covert to rex::value
+    i32:
+        c-style: int
+        type-to-rex: (value){(vint)($param)}
+        rex-to-type: (i32)($param.getInt())
+    :i32
+:end-ffi-types
+
+ffi-exports:
+; write down the export functions below
+    name: add
+    params: i32,i32
+    result: i32
+:end-ffi-exports
+
+ffi-helpers:
+; write down your type casting helper here.
+:end-ffi-helpers
+```
