Feat: add `finalize` method for objects

--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -61,3 +61,7 @@ ffi-helpers:
 加入包的支持，增加 `requirePackage` 函数.
 
 加入 `require` 函数用于统一导入模组.
+
+# 2023/1/6
+
+决定给 `value` 加上 `finalize` 方法，在这个方法，可以进行资源销毁的过程，`finalize` 成员为 `callable object`，析构时会创建一个新的解释器，进行析构函数的解释，这个解释器不会持有 `thread_id` 因为析构的线程可以是任何持有解释器的线程。 只要最终持有一个 `shared_ptr<value>` 就会发生析构。
